--- a/VBoard/src/gui/login.fxml
+++ b/VBoard/src/gui/login.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@Login.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.FXMLController">
+<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@Login.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.FXMLController">
 	<children>
-		<StackPane fx:id="loginBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+		<StackPane fx:id="loginBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<children>
 				<GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="550.0" style="-fx-background-color: rgba(0, 0, 0, .15); -fx-border-color: black; -fx-border-width: 1;">
 					<columnConstraints>
@@ -382,7 +382,7 @@
 				</GridPane>
 			</children>
 		</StackPane>
-      <HBox fx:id="gameBox" prefHeight="660.0" prefWidth="550.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <HBox fx:id="gameBox" prefHeight="660.0" prefWidth="550.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
 				<AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="250.0" style="-fx-background-image: url(&quot;wood&quot;);">
 					<children>
@@ -404,7 +404,7 @@
                   </VBox>
 					</children>
 				</AnchorPane>
-            <AnchorPane prefHeight="660.0" prefWidth="900.0" style="-fx-background-image: url(&quot;redFelt&quot;);">
+            <AnchorPane fx:id="gameTable" prefHeight="660.0" prefWidth="900.0" style="-fx-background-image: url(&quot;redFelt&quot;);">
                <children>
                   <ImageView fx:id="mainBoard" fitHeight="150.0" fitWidth="200.0" layoutX="175.0" layoutY="255.0" pickOnBounds="true" preserveRatio="true" />
                   <ImageView fx:id="gamePiece_1" fitHeight="123.0" fitWidth="92.0" layoutX="49.0" layoutY="48.0" pickOnBounds="true" preserveRatio="true" />
