fix side panel, etc
Fix side panel. Cards are removed from gameTable after leaving game.

--- a/VBoard/bin/gui/Login.css
+++ b/VBoard/bin/gui/Login.css
@@ -6,6 +6,10 @@ root {
      -fx-background-image: url("redfelt.jpg");
 }
 
+.sidePanel {
+	-fx-background-image: url("wood.jpg");
+}
+
 .label {
     -fx-font-size: 12.0px;
     -fx-font-weight: bold;
