--- a/VBoard/src/gui/VBoard.fxml
+++ b/VBoard/src/gui/VBoard.fxml
@@ -386,7 +386,7 @@
          <children>
 				<AnchorPane minWidth="250.0" prefWidth="250.0" styleClass="sidePanel">
 					<children>
-                  <VBox maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="250.0">
+                  <VBox maxWidth="-Infinity" minWidth="-Infinity" prefWidth="250.0">
                      <children>
                         <TextArea fx:id="gameTextArea" editable="false" maxWidth="-Infinity" prefHeight="300.0" prefWidth="240.0" style="-fx-border-color: black; -fx-border-width: 1.5;" wrapText="true">
                            <VBox.margin>
@@ -398,11 +398,24 @@
       														<TextField fx:id="gameChatField" onAction="#gameSendButtonAction" prefHeight="25.0" prefWidth="176.0">
                                  <HBox.margin>
                                     <Insets left="5.0" />
-                                 </HBox.margin></TextField>
+                                 </HBox.margin>
+                              </TextField>
       														<Button mnemonicParsing="false" onAction="#gameSendButtonAction" text="Send" />
       													</children>
       												</HBox>
-                        <Button mnemonicParsing="false" onAction="#gameLeaveGameButtonAction" text="Leave Game" />
+                        <VBox alignment="TOP_CENTER" prefWidth="100.0">
+                           <children>
+                              <Button fx:id="gameMyHand" mnemonicParsing="false" onAction="#gameMyHandButtonAction" text="My Hand" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="TOP_CENTER" prefWidth="100.0">
+                           <children>
+                              <Button alignment="CENTER" mnemonicParsing="false" onAction="#gameLeaveGameButtonAction" text="Leave Game" />
+                           </children>
+                           <VBox.margin>
+                              <Insets top="30.0" />
+                           </VBox.margin>
+                        </VBox>
                      </children>
                   </VBox>
 					</children>
